fix : fix implementation in bulk
